--- a/src/webfront/src/static/index.css
+++ b/src/webfront/src/static/index.css
@@ -1,5 +1,4 @@
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -12,4 +11,8 @@ hcode {
     monospace;
 }
 
-html, body {margin: 0; height: 100%; overflow: hidden}
+* {
+  font-size: 18px;
+}
+
+/* html, body {margin: 0; height: 100%; overflow: hidden} */
