--- a/src/webfront/src/static/App.css
+++ b/src/webfront/src/static/App.css
@@ -1,21 +1,11 @@
 .App {
   text-align: center;
   background-image: url("anime_mellow_sunset.png");
-  background-size: 100%;
-  height: 100vh;
+  background-size: 107%;
+  background-position: center;
   background-repeat:no-repeat;
-  padding-top: 2%;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  padding-top: 1.5%;
+  height: 100vh;
 }
 
 .App-header {
@@ -37,15 +27,6 @@
   color: red;
   margin-top: 5%;
   font-weight: bolder;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 .navbar {
