--- a/src/webfront/src/static/save.css
+++ b/src/webfront/src/static/save.css
@@ -1,9 +1,14 @@
 
 .save-container {
     background-color: #171717;
-    max-width: 55%;
+    max-width: 42%;
     opacity: 0.85;
-    margin-top: 4%;
-    font-size: 24px;
-    padding:4%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    width: 750px;
+    min-width: 750px;
+}
+
+h1 {
+    text-align: center;
 }
